# lineage-lite

./: .gitignore  BEGINNER_GUIDE.md  Cargo.toml  README.md  README.zh-TW.md  TECHNICAL.md  WALKTHROUGH.md
demo/: .lineage-rules.toml  dbt_project.yml
demo/etl/: export_daily_metrics.py  legacy_payment_sync.py  sync_events_to_warehouse.py
demo/macros/: cents_to_dollars.sql  generate_schema_name.sql  grant_select.sql  pivot_values.sql  safe_divide.sql  union_tables.sql
demo/models/: sources.yml
demo/models/marts/: mart_customers.sql  mart_orders.sql  mart_revenue.sql  mart_subscriptions.sql  schema.yml
demo/models/staging/: schema.yml  stg_orders.sql  stg_payments.sql  stg_subscriptions.sql  stg_users.sql
demo/sql/analysis/: abandoned_email_report.sql  payment_method_breakdown.sql
demo/sql/reports/: customer_cohort_report.sql  daily_revenue_report.sql  monthly_summary.sql  pii_email_usage.sql  subscription_churn_report.sql
docs/: 01-overview.md  02-rust-notes.md  03-code-flow.md  reading-guide.md
src/: cli.rs  error.rs  lib.rs  main.rs
src/graph/: mod.rs  node.rs  query.rs
src/output/: dot.rs  html.rs  mod.rs  table.rs
src/scanner/: dbt.rs  mod.rs  python.rs  sql.rs
src/storage/: mod.rs  sqlite.rs
