[package]
name = "lineage-lite"
version = "0.1.0"
edition = "2021"
description = "Static lineage analysis engine for data governance"
license = "Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
sqlparser = { version = "0.55", features = ["visitor"] }
petgraph = "0.7"
walkdir = "2"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
rusqlite = { version = "0.33", features = ["bundled"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
